<resources>
    <string name="app_name">RandomIt!</string>
    <string name="instructionsMainAct">Please enter your choices of numbers</string>
    <string name="instMainStrAct">Please enter your choices of options</string>
    <string name="minValue">Start with</string>
    <string name="maxValue">End with</string>
    <string name="firstString">1st Choice</string>
    <string name="secondString">2nd Choice</string>
    <string name="threeString">3rd Choice</string>
    <string name="fourString">4th Choice</string>
    <string name="fiveString">5th Choice</string>
    <string name="sixString">6th Choice</string>
    <string name="sevenString">7th Choice</string>
    <string name="eightString">8th Choice</string>
    <string name="ninthString">9th Choice</string>
    <string name="GoButton">Go!</string>
    <string name="biggerVal">Start value is too big!</string>
    <string name="emptyMinVal">Value cannot be empty.</string>
    <string name="emptyMaxVal">Value cannot be empty.</string>
    <string name="emptyChoiceStr">Must Enter Choice.</string>
    <string name="title_activity_drawer">DrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">RandomIt App</string>
    <string name="nav_header_subtitle">dblayzer@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="result_parent">Your random number is:</string>
    <string name="result_numberVal">Text</string>
    <string name="result_tipStrVal">Tip_text</string>
    <string name="default_strTip">"Sorry, your number was not selected.\nTry again next time :}"</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="numWelcomeBtn">1 2 3</string>
    <string name="choicesWelcomeBtn">Choices</string>
    <string name="numbers_activity_title">Random Numbers</string>
    <string name="choices_activity_title">Random Choices</string>
    <string name="str_result_title">Your selected choice is:</string>
    <string name="welcomeTitle">Welcome to RandomIt</string>
    <string name="dice">Dice</string>
    <string name="initial_dice_value">\?</string>
</resources>
