<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linear_layout_ver"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:theme="@style/AppTheme"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/app_bar_main">

    <LinearLayout
        android:id="@+id/titleLayout"
        android:layout_width="match_parent"
        android:layout_height="177dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/welcomeTitle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/varela_round"
            android:gravity="center"
            android:text="@string/welcomeTitle"
            android:textAlignment="center"
            android:textColor="@color/darkTitleColor"
            android:textSize="36sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:baselineAligned="false"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <RelativeLayout
                android:id="@+id/leftLayout"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/numsTextView"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_centerHorizontal="true"
                    android:background="@color/vibrantBlue"
                    android:clickable="true"
                    android:focusable="true"
                    android:fontFamily="@font/varela_round"
                    android:gravity="center"
                    android:singleLine="true"
                    android:text="@string/numWelcomeBtn"
                    android:textAlignment="center"
                    android:textColor="@color/vibrantButtonTextColor"
                    android:textSize="36sp"
                    android:textStyle="bold" />

            </RelativeLayout>

            <View
                android:id="@+id/divider"
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@android:color/darker_gray" />

            <RelativeLayout
                android:id="@+id/rightLayout"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/choicesTextView"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_centerHorizontal="true"
                    android:background="@color/vibrantGreen"
                    android:clickable="true"
                    android:focusable="true"
                    android:fontFamily="@font/varela_round"
                    android:gravity="center"
                    android:singleLine="true"
                    android:text="@string/choicesWelcomeBtn"
                    android:textAlignment="center"
                    android:textColor="@color/vibrantButtonTextColor"
                    android:textSize="36sp"
                    android:textStyle="bold" />

            </RelativeLayout>

        </LinearLayout>

        <View
            android:id="@+id/divider2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray" />

        <RelativeLayout
            android:id="@+id/diceLayout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <TextView
                android:id="@+id/diceTextView"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_centerHorizontal="true"
                android:background="@color/vibrantOrange"
                android:clickable="true"
                android:focusable="true"
                android:fontFamily="@font/varela_round"
                android:gravity="center"
                android:singleLine="true"
                android:text="@string/dice"
                android:textAlignment="center"
                android:textColor="@color/vibrantButtonTextColor"
                android:textSize="36sp"
                android:textStyle="bold" />

        </RelativeLayout>

    </LinearLayout>

</LinearLayout>